<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_homes"
            android:title="Home"
            android:icon="@drawable/nav_home"/>

        <item
            android:id="@+id/nav_settings"
            android:title="@string/settings"
            android:icon="@drawable/nav_settings"/>

        <item
            android:id="@+id/nav_share"
            android:title="@string/share"
            android:icon="@drawable/nav_share"/>


        <item
            android:id="@+id/nav_abouts"
            android:title="@string/abouts"
            android:icon="@drawable/nav_about"/>

    </group>

    <item
        android:title="">

        <menu>
            <item
                android:title = "@string/logout"
                android:icon="@drawable/nav_logout"
                android:id="@+id/logout_nav"
                />

        </menu>
    </item>

</menu>