<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:elevation="3dp"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <ImageView
            android:id="@+id/notification_image"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/unity_hall_milo"
            android:contentDescription="@string/here" />



        <TextView
            android:id="@+id/food_k"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:layout_marginLeft="8dp"
            android:layout_gravity="center"
            android:textColor="@color/teal"
            android:textSize="14sp"
            android:textStyle="bold"
           />


        <TextView
            android:id="@+id/food_name_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/banku_and_tilapia"
            android:layout_marginLeft="8dp"
            android:textSize="14sp"
            android:textStyle="bold"
            />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
