<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ShowDetailsActivity">



            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/food_name_show_details"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textColor="#373654"
                android:textStyle="bold"
                android:layout_marginTop="60dp"/>


    

        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/food_image_show_details"
                android:layout_marginRight="4dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/supperone"
            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/give_details_of_the_food_items_you_want"
        android:textSize="14sp"
        android:textAlignment="center"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="8dp"
        android:textColor="@color/teal"
        android:textStyle="bold"/>


    <EditText
            android:layout_width="match_parent"
            android:layout_height="128dp"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:textSize="14sp"
            android:id="@+id/food_customer_description"
            android:background="@drawable/teal_border"
            android:hint="@string/descriptions"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/order_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/order_now"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_margin="16dp"
            android:textSize="23sp"
            android:textColor="@color/white"
            android:background="@drawable/button_background"
            android:elevation="3dp"/>



        </LinearLayout>






